package ua.hillel.lessons.lesson25.demos._05_facade;

public enum Action {
    WAKE_UP, GO_TO_PLANT, WORK, GO_HOME, GO_TO_SLEEP
}
